--- a/templates/timeline.hbs
+++ b/templates/timeline.hbs
@@ -1,9 +1,9 @@
 <form style="display: flex; flex: 1; flex-wrap: nowrap; ">
     {{#each list}}
         <div class="flexcol" style="justify-content: flex-start; align-items: flex-start; margin-left: 5px; margin-right: 5px; width: 120px;">
-            <div style="flex: 0; margin-bottom: 1em;">
+            <div style="flex: 0; height: 100px; margin-bottom: 1em;">
                 <svg width="100%" viewBox="0 0 130 60"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
-                    <path d="M0,0L100,0L130,30L100,60L0,60L30,30L0,0" style="fill:orange;stroke:black;stroke-width:1px;"/>
+                    <path d="M0,30L30,0L130,0L100,30L130,60L30,60L0,30" style="fill:orange;stroke:black;stroke-width:1px;"/>
                     <text x="40" y="40" style="font-size: 30px;">{{this.ticks}}</text>
                 </svg>
             </div>
