Fix Github #4: scalable window

--- a/templates/timeline.hbs
+++ b/templates/timeline.hbs
@@ -1,4 +1,4 @@
-<form style="display: flex; flex-wrap: nowrap; width: 100%;">
+<form style="display: flex; flex-wrap: nowrap; width: 100%;" id="timelineWrapper">
     {{#each list}}
         <div class="flexcol" style="justify-content: flex-start; align-items: flex-start; margin-left: 5px; margin-right: 5px; width: 120px;">
             <div style="flex: 0; width: 100%; margin-bottom: 1em;">
